compiler/tools/fpp-check/test/redef/component.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/component.fpp: 2.1
passive component C { }
^
error: redefinition of symbol C
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/component.fpp: 1.1
passive component C { }
^
